--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="hr">
 <head>
-     <!-- Global site tag (gtag.js) - Google Ads: 613057343 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-613057343"></script>
+    <!-- Global site tag (gtag.js) - Google Ads: 604020813 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-604020813"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-613057343');
+  gtag('config', 'AW-604020813');
 </script>
+
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Kao liječnici, želeći zaraditi gotovo do smrti nisu doveli Danijela Trbović , iskoristivši bolest slavne voditeljice.</title>
@@ -76,14 +77,14 @@
         <br>
         <p><b>Dopisnica: Danijela, zašto nikad niste razgovarale o svojoj ozbiljnoj bolesti? U posljednje vrijeme nestale ste iz prostora vijesti i praktički živjele izolirano, niste nikog kontaktirale. </b></p>
 
-        <p><b>Danijela Trbović: </b> Vjerujem da je to moja stvar i da ne biste trebali opterećivati ​​druge svojim problemima. Osim toga, mislila sam da problem nije toliko kritičan da sam se ozbiljno zabrinula. Stoga sam zaključila da ovo pitanje neću javno iznositi. </p>
+        <p><b>Danijela Trbović: </b> Vjerujem da je to moja stvar i da ne biste trebali opterećivati  druge svojim problemima. Osim toga, mislila sam da problem nije toliko kritičan da sam se ozbiljno zabrinula. Stoga sam zaključila da ovo pitanje neću javno iznositi. </p>
         <br>
         <p><b>Dopisnik: "Ali sada ste to odlučile podijeliti?"</b></p>
 
         <p><b>Danijela Trbović: </b> Sad sam odlučila. Ali ovo nije toliko želja da ispričate o svojoj bolesti, već želja da pomognete ljudima koje poput mene paraziti jedu iznutra, zbog čega možete umrijeti svake minute. Nitko od nas nije imun na medicinske komplikacije, a to se događa vrlo naglo. Danas ste zdrava osoba, a sutra ste praktički leš koji nema šanse izaći. A većina liječnika samo će vam uzeti novac dok mogu. I mirno će vas gledati kako umirete. </p>
         <p><strong>Dopisnik: "Kako to mislite?"</strong></p>
         <p><b>Danijela Trbović: </b> Upravo ono što sam rekla. Kad sam primjetila prve simptome zaraze parazitima, nisam ni razumjela što se dogodilo. Ne znaju svi da ako se na koži pojave papilomi, počnete se brzo umarati, a iz usta dolazi vrlo neugodan miris, što znači da se paraziti množe u tijelu. Na kraju sam otišla kod liječnika i postavili su ispravnu dijagnozu. Istina, učinili su to drugi put, jer prvi put su mi samo prepisali hrpu sedativa, neke kreme od papiloma i druge gluposti. Drugi su ga put pomnije pregledali, napravili puno testova i rekli da unutra žive barem tri vrste parazita koji se aktivno razmnožavaju. Bila sam šokirana i obratila se stručnjaku kojeg nije bilo tako lako pronaći - parazitologu. Rekao je da više ne smije uzimati ranije lijekove, propisao je mnogo novih i rekao da bi trebali pomoći. Tek kasnije sam shvatila da su, izračunavši iznos koji se iz mene može izvući, liječnici samo željeli bolest učiniti još aktivnijom.  </p>
-        <p>Otprilike dva mjeseca sve je bilo u redu. Da, osjećala sam se vrlo umorno, nastavili su se pojavljivati ​​novi papilomi, povremeno me nešto boljelo, ali ništa kritično u zdravstvenom smislu. Potom se iznenada pojavila oštra bol u području bubrega. Samo trenutno. Navečer, kad sam legla, sve je bilo u redu. A ujutro sam jedva ustao iz kreveta, bolovi su bili tako jaki. Odmah sam otišla kod doktora. </p>
+        <p>Otprilike dva mjeseca sve je bilo u redu. Da, osjećala sam se vrlo umorno, nastavili su se pojavljivati  novi papilomi, povremeno me nešto boljelo, ali ništa kritično u zdravstvenom smislu. Potom se iznenada pojavila oštra bol u području bubrega. Samo trenutno. Navečer, kad sam legla, sve je bilo u redu. A ujutro sam jedva ustao iz kreveta, bolovi su bili tako jaki. Odmah sam otišla kod doktora. </p>
         <p><b>Dopisnik: "A što su vam rekli?"</b></p>
         <p><b>Danijela Trbović: </b> Zbunili smo se, uhvatila panika. Rekli su da su to ličinke parazita koje mi živi izgrizaju desni bubreg. Oni stavljaju pred izbor, režu želudac i sve čiste ili se podvrgavaju konzervativnom liječenju u bolnici. Inače, bubreg jednostavno neće uspjeti, a ličinke će se proširiti po tijelu i početi uništavati druge organe. To jamči smrtonosni ishod. Takva operacija u mojim godinama vrlo je opasan korak, pa je jedina alternativa bila bolnica. Neću reći koju su cijenu imenovali, ali premašila je sve razumne troškove. I, naravno, sve je prošlo mimo blagajne. Službeno, postupci su provedeni za cente. Sad razumijem da je sve ovo bila obmana u svrhu zarade i to su učinili na štetu mog zdravlja. Ali ako postoji stvarna prijetnja umiranjem, logika ne funkcionira. </p>
         <p>Složila sam se s imenovanom količinom, provela sam tri tjedna u bolnici kao redoviti pacijent, a zatim dolazila tamo svaki dan. Tijekom liječenja bolovi su se prvo smanjili, a zatim i posve nestali. </p>
