--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
             </div>
 
             <div class="col-md-3">
-                <p><a href="#order_form"><img src="tov.png" style="width:100%;
-                    max-width: 250px"></a></p>
+                <p><center><a href="#order_form"><img src="tov.png" style="width:55%;
+                    max-width: 250px"></a></center></p>
                 <p><a href="#order_form" style="color: #444; text-decoration: none;"><b>U Hrvatskoj je započela centralizirana distribucija lijekova za parazite</b></a>
                 </p>
             </div>
